# ForgeData

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
forge_data/data/: crawler.py  parser.py  raw.py
forge_data/scripts/: process_raw_data.py
forge_data/torch_dataset/: forge_dataset.py
forge_data/ue/: api.py  core.py
forge_data/ue/core/: recon.py
forge_data/utils/: vis.py
scripts/: process_raw_data.py
scripts/dev/: compression_test_ss.py  forgedata_movie.py  h5_to_mesh.py  obj_geometry_comparison.py  rebuild_keys.py  temp_comp.py  test_dataloader.py  tune_ue_core_optimizer.py  view_thermal.py  view_thermal2.py  view_thermal3.py
tests/: test_foo.py
